--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Schwarzer Hintergrund</title>
   </head>
-  <body bgcolor="#000000" style="background-color: #000000;">
-    <div style="color: #620000;">Testseite2</div>
+  <body style="background-color: #000000; color: #006262;">
+    Lernprojekte.github.io
   </body>
 </html>
