--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html>
-  <head>
-    <title>Schwarzer Hintergrund</title>
-  </head>
-  <body style="background-color: #000000; color: #006262;">
-    Lernprojekte.github.io
-  </body>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/Experimentell1.css" />
+  <title>Lernprojekte</title>
+</head>
+<body>
+  <h1>Lernprojekte</h1>
+  <p>Ich habe dieses Benutzerkonto für alle Freigeister erschaffen, deren Pioniergeist, Wissensdurst und Drang nach Erkenntnis von den deutschen <i>Bildungsanstalten</i> verkannt wurden. Daher möchte ich hier Projekte ins Leben rufen, die das Erlernen neuer Kenntnisse und Fähigkeiten sowie das Ausbilden eines tiefergreifenden Verständnisses spezieller Themen im Einzelnen aber auch des Zusammenhangs verschiedener Themengebiete untereinander unterstützen sollen. Ich hoffe, dass es mir gelingt, hier nach und nach eine wertvolle Ansammlung an Lern- und Übungsprojekten entstehen zu lassen, die Anderen auf ihrem Weg, ihren eigenen Interessen zu folgen und ihre eigenen Lernziele erfolgreich zu meistern, hilft. Wenn es mir gelingt, meinen Teil dazu beizutragen, dann erfüllt mich das mit Genugtuung und Zufriedenheit.</p>
+</body>
 </html>
