--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/Experimentell1.css" />
+  <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/Bildschirmausgabe.css" />
+  <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/Lernprojekte.github.io.css" />
+  <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/Druckerausgabe.css" />
   <title>Lernprojekte</title>
 </head>
 <body>
