--- a/Darstellungsregeln/index.html
+++ b/Darstellungsregeln/index.html
@@ -8,7 +8,7 @@
         background-color: #000000;
       }
     </style>
-    <title>Schwarzer Hintergrund</title>
+    <title></title>
   </head>
   <body>
   </body>
