--- a/Start.html
+++ b/Start.html
@@ -15,6 +15,11 @@
     <p id="dimensions"></p>
 
     <div id="Inhalte">Inhalte</div>
+    <table id="InhaltangabeRahmen">
+      <tr>
+        <td id="InhaltsangabeListe">Inhaltsangabe</td>
+      </tr>
+    </table>
     <div id="Inhaltsangabe">Inhaltsangabe</div>
     <div id="Inhaltsauswahl">Inhaltsauswahl</div>
     <script src="./59/v01-Ausrichtung.js"></script>
