--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div id="Randbereich">
-      <img id="Titelbild" src="https://avatars.githubusercontent.com/u/145531931" />
+      <img id="Titelbild" src="Titelbild.jpg" />
       <a id="Titelzeile" href="https://github.com/Lernprojekte">Lernprojekte</a>
       <div id="Infobereich">
         <img
