--- a/Lernprojekte-Dokumentation.html
+++ b/Lernprojekte-Dokumentation.html
@@ -39,8 +39,7 @@
 
 
   <div id="Fußzeile">
-    <div class="klein">Alle Projekte:</div>
-    <div id="Projektliste"></div>
+    <div>Alle Projekte:</div>
   </div>
 </body>
 </html>
